# Crewmate

./: .gitignore  README.md  crewmate-2.pcapng  crewmate-3.pcapng  crewmate.pcapng  main.py  pyproject.toml  settings.py
crewmate/: capture.py  cmd.py  dissector.py  packets.py  utils.py
crewmate/packets/: __init__.py  base.py  data.py
crewmate/packets/rpc/: enter_vent.py  exit_vent.py  rpc.py  set_name.py  voting_complete.py
