[tool.poetry]
name = "crewmate"
version = "0.1.0"
description = "Among Us packet dissection"
authors = ["Mythic <mythicmaniac@gmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
scapy = "^2.4.4"
psutil = "^5.7.2"
requests = "^2.24.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
